@@ -1,3 +1,11 @@
+2004-03-26  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
+
+	* generic/tkImgPPM.c (StringWritePPM): New function to support
+	converting of images to PPM strings.  Other direction not yet
+	done.  Rest of file converted to use new image API.
+	* generic/tkImgPhoto.c (ImgPhotoCmd): Restored support for the
+	stringWriteProc of old photo formats.  [Bug 923555]
+
 2004-03-20  Jim Ingham  <jingham@apple.com>
 
 	* macosx/tkMacOSXSubwindows.c (GenerateConfigureNotify): New
